# kin

./: .env  .eslintrc  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README  README.md  SECURITY.md  TODO.md  contributing.md  eslint.config.mjs  grammar.bnf  package-lock.json  package.json  renovate.json  reserved_keywords.md  ruanda-lang.cbp  testing2.kin  todo.md  tsconfig.eslint.json  tsconfig.json
.github/: FUNDING.yml  pull_request_template.md  test-pr.yml
.husky/: pre-commit
examples/: arrays.kin  arthimetic-operators.k  arthimetic-operators.kin  comments.k  conditional-statement.kin  data-types.k  data-types.kin  exit.kin  factorial.kin  fibonacci.kin  fizzbuzz.kin  functions.k  functions.kin  if-statements.k  if-statements.kin  io.kin  loop-control-statements.k  loop-control-statements.kin  loops.k  loops.kin  miscellaneous-operators.k  miscellaneous-operators.kin  miscellaneous-operators.rw  objects.kin  recursion.k  recursion.kin  relational-logic-operators.k  relational-logic-operators.kin  switch.kin  type-casting.k  type-casting.kin  unary-operators.k  unary-operators.kin  user-input.k  user-input.kin
samples/: arthimetic-operators.kin  comments.kin  data-types.kin  exit.kin  file-operations.kin  functions.kin  if-statements.kin  loop-control-statements.kin  loops.kin  miscellaneous-operators.kin  recursion.kin  relational-logic-operators.kin  sisitemu.kin  type-casting.kin  unary-operators.kin  user-input.kin
spec/: exit.kin  file-operations.kin  loops.kin  unary-operators.kin  user-input.kin
src/: ast.h  common.c  common.h  error-codes.h  errors.c  errors.h  exit-codes.h  index.ts  kin  kin.h  kin.ts  lexer.c  lexer.h  main.c  main.ts  parser.c  parser.h  readme  readme.md
src-new/: main.cpp
src-old/: errors.c  lexer.c  main.c  parser.c  readme.md
src/lexer/: lexer.ts  (+1 more)
tests/: lexer.test.ts  parser.test.ts  switch.test.ts
(+25 files in other folders)
