# cmake_minimum_required(VERSION 3.10)
# project(kin C)

# # Specify the source files and headers
# file(GLOB_RECURSE SOURCES "src/*.c")
# file(GLOB_RECURSE HEADERS "src/headers/*.h")

# # Set the output binary directory
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)

# # Create the executable
# add_executable(kin ${SOURCES} ${HEADERS})
